# mitbforalldemo

./: LICENSE  README.md
adk/: .env.example  .gitignore  README.md  agent.py  agents.py  main.py  mcp_tool.py  pyproject.toml  runner.py
fine_tuning/: bert-fine-tuning.ipynb  bert_fine_tuning.ipynb  pyproject.toml
http_api/: api.py  echo.html  index.html
orm/: alembic.ini  demo.py  requirements.txt
orm/alembic/versions/: 5ec566d6cb98_create_food_table.py  a8d5432e9afc_create_animals_table.py
topic_modelling/: README.md  pyproject.toml  topic_modelling.ipynb
